# 3-package-snow_leopard

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yaml
pyquote/: __init__.py  __main__.py
pyquotes/: __init__.py  __main__.py  quotes.py
tests/: test_quotes.py
