
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquotes"
description = "A Python package that delivers quotes, compliments, and fortunes"
version = "0.1.0"
authors = [
  { name="Claire Boczkowski"},
  { name= "Mikhail Bond"},
  { name="Lucas Bazoberry"},
  { name="Ermuun Bayartsaikhan"},
  { name="Chris Cajamarca"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "quotes", "compliments", "fortune"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-snow_leopard"
"Repository" = "https://github.com/swe-students-spring2026/3-package-snow_leopard.git"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-snow_leopard/issues"
